--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,10 @@ edition = "2021"
 [dependencies]
 chacha20poly1305 = "0.10.1"
 argon2 = "0.5.2"
+serde = { version = "1.0.195", features = ["derive"] }
+serde_json = "1.0.111"
+base64 = "0.21.5"
+bs58 = "0.5.0"
+reqwest = { version = "0.11.23", features = ["blocking", "json"] }
+
+rsa = "0.9.6"
