--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ serde_json = "1.0.111"
 bs58 = "0.5.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 rsa = "0.9.6"
+tokio = { version = "1.35.1", features = ["full"] }
+serde_with = "3.4.0"
