--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ reqwest = { version = "0.11.23", features = ["blocking", "json"] }
 rsa = "0.9.6"
 tokio = { version = "1.35.1", features = ["full"] }
 serde_with = "3.4.0"
+cliclack = "0.1.10"
