--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ serde = { version = "1.0.195", features = ["derive"] }
 serde_json = "1.0.111"
 bs58 = "0.5.0"
 reqwest = { version = "0.11.23", features = ["blocking", "json"] }
-rsa = "0.9.6"
+rsa = { version = "0.9.6", features = ["sha2"] }
 tokio = { version = "1.35.1", features = ["full"] }
 serde_with = "3.4.0"
 cliclack = "0.1.10"
